# pavlov25

./: .gitignore  README.md  desktop.ini  pyproject.toml  pyproject_spoof.toml  python.gitignore  requirements-termux.txt  requirements_mpl.txt  requirements_termux.txt
.pyinstaller/: desktop.ini
MSIX/: desktop.ini
WinGet/: desktop.ini
batch/: batchtest.txt  desktop.ini  gbd27f.txt
blender-add-on/: README.md
core/: arrayMath.py  axes_labels_machine.py  cli.py  colorLerp.py  conditional_import.py  config_input.py  createBlend.py  createFBX.py  createPlot.py  data_gen.py  desktop.ini  directories.py  filter_files.py  font.py  generate_UML.py  group_label_machine.py  grouping_by_string.py  gui.py  gui_simple.py  hierarchy.py  import_lib.py  improvements.py  letter.py  main.py  materials.py  messaging.py  numeric_islands.py  parse_user_input_config.py  phrase.py  pngMaker.py  preview.py  scale.py  scene.py  setup_defunct.py  style.py  test_project_directory_creation.py  text_control_points.py  text_height.py  text_label.py  tick_numbering_machine.py  (+7 more)
deb/: README.md
dev-tools/: README.md  convert_png_to_ico.py  desktop.ini  ms-fabric-tool.py  update_dist-projects-sample_from_core-projects-sample.py
docs/: CHANGELOG.md
logs/: 2025-02Feb-22 Daily Notes.md  desktop.ini
scripts/: activate-venv-py310.sh  install-py310-termux.sh
src/: axes_labels_machine.py  cli-cmd2.py  colorLerp.py  config_input.py  createFBX.py  curve.py  curve_.py  datapoint.py  deltaList.py  directories.py  environment.py  filemanagement.py  filter_files.py  generate_UML.py  group.py  group_label_machine.py  grouping_by_directory.py  grouping_by_map.py  grouping_by_spreadsheet.py  grouping_by_string.py  gui.py  gui_customtk_basic.py  gui_simple.py  hierarchy.py  import_lib.py  lines_FBX.py  main.py  materials.py  scale.py  scene.py  shell.py  space_delimited_clickdata.csv  stack.py  style.py  text_control_points.py  (+11 more)
(+179 files in other folders)
