[project]
name = "pavlov25"
version = "0.1.0"
description = "Pavlov3D development project."
authors = [
    {name = "George Clayton Bennett",email = "pavlov3d@proton.me"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fbxsdkpy (>=2020.3.post1,<2021.0)",
    "cmd2 (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "inria"
url = "https://gitlab.inria.fr/api/v4/projects/18692/packages/pypi/simple"
priority = "primary"


[tool.poetry.dependencies]
fbxsdkpy = {source = "inria"}
