[project]
name = "pavlov3d"
version = "0.1.3"
description = ""
authors = [
    {name = "Clayton Bennett",email = "	claytonrobot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmd2 (>=2.5.11,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "fbxsdkpy (>=2020.3.post1,<2021.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "sparklines (>=0.5.0,<0.6.0)",
    "freesimplegui (>=5.2.0.post1,<6.0.0)"
]
packages = [{ include = "src" }]


[[tool.poetry.source]]
name = "gitlab-repo-fbx"
url = "https://gitlab.inria.fr/api/v4/projects/18692/packages/pypi/simple"
#default = false


[tool.poetry.dependencies]
fbxsdkpy = {source = "gitlab-repo-fbx"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
